[gd_scene load_steps=6 format=3 uid="uid://dalyauegkc2bh"]

[ext_resource type="Script" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="Texture2D" uid="uid://okcal22n54om" path="res://reflexlab_background.png" id="1_ig7tw"]

[sub_resource type="LabelSettings" id="LabelSettings_0xm2m"]
font_size = 40
font_color = Color(0.933333, 1, 0.8, 1)

[sub_resource type="LabelSettings" id="LabelSettings_h2yge"]
font_size = 60
font_color = Color(0.933333, 1, 0.8, 1)

[sub_resource type="LabelSettings" id="LabelSettings_l1vto"]
font_size = 60
font_color = Color(0.933333, 1, 0.8, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_0xm2m")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 1254.0
offset_top = 365.0
offset_right = 1405.0
offset_bottom = 420.0
text = "Score: 0"
label_settings = SubResource("LabelSettings_0xm2m")

[node name="FinalScoreLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 784.0
offset_top = 338.0
offset_right = 1164.0
offset_bottom = 421.0
text = "Final Score: 0"
label_settings = SubResource("LabelSettings_h2yge")

[node name="ScientistBannerLabel" type="Label" parent="UI"]
visible = false
layout_mode = 0
offset_left = 538.0
offset_top = 264.0
offset_right = 1385.0
offset_bottom = 347.0
text = "DON'T HURT THE SCIENTISTS!"
label_settings = SubResource("LabelSettings_l1vto")

[node name="ScientistBannerSound" type="AudioStreamPlayer" parent="UI"]

[node name="ScientistBannerTimer" type="Timer" parent="UI"]
one_shot = true

[node name="Background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(960, 538)
texture = ExtResource("1_ig7tw")

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="Spawn1" type="Node2D" parent="."]
position = Vector2(549, 863)

[node name="Spawn2" type="Node2D" parent="."]
position = Vector2(790, 859)

[node name="Spawn3" type="Node2D" parent="."]
position = Vector2(1059, 862)

[node name="Spawn4" type="Node2D" parent="."]
position = Vector2(1318, 868)

[node name="MonsterHitSound" type="AudioStreamPlayer" parent="."]

[node name="ScientistHitSound" type="AudioStreamPlayer" parent="."]
